# docs/swagger.yaml
@@ -1,76 +1,87 @@
 definitions:
-  handler.ResponseBody:
+  dto.LoginRequest:
     properties:
-      code:
-        type: integer
-      data: {}
-      msg:
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  dto.LoginResponse:
+    properties:
+      access_token:
         type: string
     type: object
-  model.Datetime:
+  dto.LoginUser:
     properties:
-      time:
+      email:
         type: string
-      valid:
-        description: Valid is true if Time is not NULL
-        type: boolean
+      nickname:
+        type: string
+      username:
+        type: string
+    type: object
+  dto.PaginationResult:
+    properties:
+      data: {}
+      page:
+        type: integer
+      page_size:
+        type: integer
+      total:
+        type: integer
+    type: object
+  model.Role:
+    properties:
+      created_at:
+        type: string
+      enable:
+        type: integer
+      id:
+        type: integer
+      name:
+        type: string
+      remark:
+        type: string
+      updated_at:
+        type: string
     type: object
   model.User:
     properties:
       avatar_url:
         type: string
       created_at:
-        $ref: '#/definitions/model.Datetime'
-      created_by:
         type: string
       email:
         type: string
       enabled:
         type: integer
+      gender:
+        type: integer
       id:
         type: integer
+      nickname:
+        type: string
       phone:
         type: string
-      real_name:
-        type: string
-      type:
-        type: integer
+      roles:
+        items:
+          $ref: '#/definitions/model.Role'
+        type: array
       updated_at:
-        $ref: '#/definitions/model.Datetime'
-      updated_by:
         type: string
       username:
         type: string
     type: object
-  schema.LoginRequest:
+  response.Response:
     properties:
-      password:
-        type: string
-      username:
-        type: string
-    required:
-    - password
-    - username
-    type: object
-  schema.LoginResponse:
-    properties:
-      access_token:
-        type: string
-    type: object
-  schema.RegisterRequest:
-    properties:
-      password:
-        type: string
-      username:
-        type: string
-    required:
-    - password
-    - username
-    type: object
-  schema.RegisterResponse:
-    properties:
-      id:
+      code:
         type: integer
+      data: {}
+      msg:
+        type: string
     type: object
 info:
   contact: {}
@@ -85,33 +96,26 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/schema.LoginRequest'
+          $ref: '#/definitions/dto.LoginRequest'
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "0":
+          description: ""
           schema:
             allOf:
-            - $ref: '#/definitions/handler.ResponseBody'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/schema.LoginResponse'
+                  $ref: '#/definitions/dto.LoginResponse'
               type: object
       summary: Login user
       tags:
       - Auth
-  /register:
+  /logout:
     post:
       consumes:
       - application/json
-      parameters:
-      - description: Register request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/schema.RegisterRequest'
       produces:
       - application/json
       responses:
@@ -119,14 +123,53 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/handler.ResponseBody'
+            - $ref: '#/definitions/response.Response'
             - properties:
-                data:
-                  $ref: '#/definitions/schema.RegisterResponse'
+                msg:
+                  type: string
               type: object
-      summary: Register user
+      security:
+      - ApiKeyAuth: []
+      summary: Logout user
       tags:
       - Auth
+  /roles:
+    get:
+      description: List Roles
+      parameters:
+      - in: query
+        name: keyword
+        type: string
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: page_size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "0":
+          description: ""
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/dto.PaginationResult'
+                  - properties:
+                      Data:
+                        items:
+                          $ref: '#/definitions/model.Role'
+                        type: array
+                    type: object
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: List Roles
+      tags:
+      - Roles
   /user:
     get:
       consumes:
@@ -134,22 +177,118 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "0":
+          description: ""
           schema:
             allOf:
-            - $ref: '#/definitions/handler.ResponseBody'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
                   $ref: '#/definitions/model.User'
               type: object
-      summary: Get auth user
+      security:
+      - ApiKeyAuth: []
+      summary: Get login user
       tags:
-      - Auth
+      - Users
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: User
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.LoginUser'
+      produces:
+      - application/json
+      responses:
+        "0":
+          description: ""
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.User'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Update login user
+      tags:
+      - Users
+  /users:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - in: query
+        name: keyword
+        type: string
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: page_size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "0":
+          description: ""
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/dto.PaginationResult'
+                  - properties:
+                      Data:
+                        items:
+                          $ref: '#/definitions/model.User'
+                        type: array
+                    type: object
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: List users
+      tags:
+      - Users
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: User
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
+      produces:
+      - application/json
+      responses:
+        "0":
+          description: ""
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.User'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Create user
+      tags:
+      - Users
   /users/{id}:
     get:
+      consumes:
+      - application/json
       parameters:
-      - description: user id
+      - description: User ID
         in: path
         name: id
         required: true
@@ -157,18 +296,52 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "0":
+          description: ""
           schema:
             allOf:
-            - $ref: '#/definitions/handler.ResponseBody'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
                   $ref: '#/definitions/model.User'
               type: object
-      summary: User Get By ID
+      security:
+      - ApiKeyAuth: []
+      summary: Get user by id
       tags:
-      - User
+      - Users
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: User
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
+      produces:
+      - application/json
+      responses:
+        "0":
+          description: ""
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.User'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Update user
+      tags:
+      - Users
 securityDefinitions:
   ApiKeyAuth:
     in: header
